--- a/src/main/resources/Launcher.fxml
+++ b/src/main/resources/Launcher.fxml
@@ -34,7 +34,7 @@
             <Text fx:id="portText" strokeType="OUTSIDE" strokeWidth="0.0" text="Port" />
             <Text fx:id="userNameText" strokeType="OUTSIDE" strokeWidth="0.0" text="Username" GridPane.rowIndex="1" />
             <Text fx:id="ipText" strokeType="OUTSIDE" strokeWidth="0.0" text="IP:" GridPane.rowIndex="2" />
-            <TextField fx:id="portTextField" GridPane.columnIndex="1" />
+            <TextField fx:id="portTextField" text="15032" GridPane.columnIndex="1" />
             <TextField fx:id="userNameTextField" GridPane.columnIndex="1" GridPane.rowIndex="1" />
             <TextField fx:id="ipTextField" GridPane.columnIndex="1" GridPane.rowIndex="2" />
          </children>
