--- a/src/main/resources/TextChatClientController.fxml
+++ b/src/main/resources/TextChatClientController.fxml
@@ -13,7 +13,7 @@
             <Font size="26.0" />
          </font>
       </Label>
-      <ListView fx:id="clientList" layoutY="67.0" prefHeight="335.0" prefWidth="426.0" />
+      <ListView fx:id="clientList" layoutY="67.0" onMouseClicked="#openChatWindow" prefHeight="335.0" prefWidth="426.0" />
       <Text layoutX="14.0" layoutY="58.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Available People" />
    </children>
 </AnchorPane>
