--- a/src/main/resources/TextChatConversationController.fxml
+++ b/src/main/resources/TextChatConversationController.fxml
@@ -3,10 +3,8 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
-<?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.text.Font?>
 
 <AnchorPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="321.0" prefWidth="426.0" styleClass="background" stylesheets="@textchat.css" xmlns="http://javafx.com/javafx/8.0.76-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="textchat.TextChatConversationController">
@@ -16,37 +14,9 @@
             <Font size="26.0" />
          </font>
       </Label>
-      <SplitPane fx:id="godSplitPane" dividerPositions="0.5" layoutY="54.0" orientation="VERTICAL" prefHeight="267.0" prefWidth="426.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="54.0">
-        <items>
-          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0">
-               <children>
-                  <SplitPane dividerPositions="0.9" prefHeight="132.0" prefWidth="424.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-                    <items>
-                      <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
-                           <children>
-                              <ListView fx:id="messageList" prefHeight="130.0" prefWidth="271.0" stylesheets="@textchat.css" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
-                           </children>
-                        </AnchorPane>
-                      <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
-                           <children>
-                              <ListView prefHeight="158.0" prefWidth="96.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
-                           </children>
-                        </AnchorPane>
-                    </items>
-                  </SplitPane>
-               </children>
-            </AnchorPane>
-          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0">
-               <children>
-                  <HBox fillHeight="false" prefHeight="131.0" prefWidth="424.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-                     <children>
-                        <TextArea fx:id="messageBox" prefHeight="25.0" prefWidth="360.0" HBox.hgrow="ALWAYS" />
-                        <Button defaultButton="true" mnemonicParsing="false" onMouseClicked="#sendMessage" prefHeight="25.0" prefWidth="65.0" text="Send" HBox.hgrow="NEVER" />
-                     </children>
-                  </HBox>
-               </children>
-            </AnchorPane>
-        </items>
-      </SplitPane>
+      <ListView fx:id="messageList" prefHeight="130.0" prefWidth="271.0" stylesheets="@textchat.css" AnchorPane.bottomAnchor="50.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="96.0" AnchorPane.topAnchor="60.0" />
+      <ListView prefHeight="158.0" prefWidth="96.0" AnchorPane.bottomAnchor="50.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="60.0" />
+      <TextArea fx:id="messageBox" onKeyReleased="#sendMessageFromEnter" prefHeight="25.0" prefWidth="360.0" AnchorPane.bottomAnchor="7.0" AnchorPane.rightAnchor="64.0" />
+      <Button fx:id="sendButton" defaultButton="true" mnemonicParsing="false" onAction="#sendMessage" prefHeight="25.0" prefWidth="65.0" text="Send" AnchorPane.bottomAnchor="15.0" AnchorPane.rightAnchor="0.0" />
    </children>
 </AnchorPane>
