--- a/src/main/resources/Launcher.fxml
+++ b/src/main/resources/Launcher.fxml
@@ -11,14 +11,14 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="426.0" styleClass="background" stylesheets="@textchat.css" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="textchat.LauncherController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="426.0" styleClass="background" stylesheets="@textchat.css" xmlns="http://javafx.com/javafx/8.0.76-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="textchat.LauncherController">
    <children>
       <Label layoutX="154.0" layoutY="14.0" text="TextChat">
          <font>
             <Font size="26.0" />
          </font>
       </Label>
-      <Button defaultButton="true" layoutX="182.0" layoutY="341.0" mnemonicParsing="false" onMouseClicked="#launch" text="Launch" />
+      <Button defaultButton="true" layoutX="182.0" layoutY="341.0" mnemonicParsing="false" onAction="#launch" text="Launch" />
       <ToggleButton fx:id="serverOrClientButton" layoutX="183.0" layoutY="81.0" mnemonicParsing="false" onMouseClicked="#toggleServerOrClient" text="Server" />
       <GridPane layoutX="115.0" layoutY="155.0">
         <columnConstraints>
