--- a/src/main/resources/TextChatConversationController.fxml
+++ b/src/main/resources/TextChatConversationController.fxml
@@ -16,7 +16,7 @@
       </Label>
       <ListView fx:id="messageList" prefHeight="130.0" prefWidth="271.0" stylesheets="@textchat.css" AnchorPane.bottomAnchor="50.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="96.0" AnchorPane.topAnchor="60.0" />
       <ListView prefHeight="158.0" prefWidth="96.0" AnchorPane.bottomAnchor="50.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="60.0" />
-      <TextArea fx:id="messageBox" onKeyReleased="#sendMessageFromEnter" prefHeight="25.0" prefWidth="360.0" AnchorPane.bottomAnchor="7.0" AnchorPane.rightAnchor="64.0" />
+      <TextArea fx:id="messageBox" onKeyReleased="#sendMessageFromEnter" prefHeight="25.0" prefWidth="360.0" AnchorPane.bottomAnchor="7.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="64.0" />
       <Button fx:id="sendButton" defaultButton="true" mnemonicParsing="false" onAction="#sendMessage" prefHeight="25.0" prefWidth="65.0" text="Send" AnchorPane.bottomAnchor="15.0" AnchorPane.rightAnchor="0.0" />
    </children>
 </AnchorPane>
